# sync

./: .gitignore  Dockerfile  package-lock.json  pyproject.toml  requirements.txt  setup.py
rescon/: __init__.py  config.py  main.py  utils.py
rescon/lib/: generate.py  model.py  pipeline.py  prompt.py
rescon/lib/formats/: __init__.py  tex.py
rescon/rescon/: generate.py  model.py  pipeline.py  prompt.py
rescon/rescon/formats/: __init__.py  tex.py
rescon/scripts/: generate_pdf.sh
rescon/sources/: __init__.py  base.py  greenhouse.py  lever.py
rescon/static/: background-color.js  form.css  index.css  result.css
rescon/templates/: form.html  index.html
rescon/templates/html/: error.html  form.html  index.html  link.html  manual.html  result.html  select.html
rescon/templates/tex/: 1695712251.813645.tex  1695863133.296293.tex  1706407163.96279.tex  1706413301.721405.tex  1706414603.085723.tex  CATERED.tex  Tanush_Chopra_resume.tex  __init__.py  chrono.ttx  func.ttx  generate_pdf.sh  parskip.sty  tmp.ipynb
rescon/templates/tex/dev/: resume.cls  tmp.xml
