[tool.poetry]
name = "rescon"
version = "0.1.0"
description = "Cater your resume for every job application!"
authors = ["DumbassNamedTuna <50528857+Bluefin-Tuna@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
langchain = "^0.0.287"
python-dotenv = "^1.0.0"
texsoup = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
