[tool.poetry]
name = "rescon"
version = "0.1.0"
description = "Cater your resume for every job application!"
authors = ["DumbassNamedTuna <50528857+Bluefin-Tuna@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
langchain = "^0.0.287"
python-dotenv = "^1.0.0"
texsoup = "^0.3.1"
openai = "^0.28.1"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
